--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500&family=Libre+Baskerville&family=Merriweather&display=swap"
         rel="stylesheet">
+    <script src="myscript.js"></script>
 </head>
 
 <body cz-shortcut-listen="true">
